<resources>
    <string name="app_name">爱上校园</string>
    <string name="start_text">开始你的兼职之旅</string>
    <string name="register_text">快来加入我们</string>
    <string name="username">账号</string>
    <string name="psw">密码</string>
    <string name="login">登录</string>
    <string name="forgetpsw">忘记密码？</string>
    <string name="register_user">注册账号</string>
    <string name="forgetnoerror">遗忘并不可怕</string>
    <string name="psw_verify">验证密码</string>
    <string name="new_psw">新密码</string>
    <string name="togetpsw">找回密码</string>
    <string name="returnlogin">返回登录</string>
    <string name="confirm_psw">重新输入密码</string>
    <string name="register">注册</string>
    <string name="my">我的</string>
    <string name="search">搜索</string>
    <string name="mainpage">主页</string>
    <string name="why">\?</string>
    <string name="search_str">请输入兼职关键字</string>
    <string name="imboss">我是商家</string>
    <string name="back">返回</string>
    <string name="mycollection">我的收藏</string>
    <string name="removeall">清空</string>
    <string name="net_disconnect">当前网络已断开，请检查网络</string>
    <string name="protocols">
        &#160;&#160;&#160;&#160;请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、争议解决和法律适用条款。如您对协议有任何疑问的，应向杭州钱生钱科技有限公司钱生钱客服咨询。\n
        &#160;&#160;&#160;&#160;当您按照注册页面提示填写信息、阅读并同意本协议且完成全部注册程序后，或您按照激活页面提示填写信息、阅读并同意本协议且完成全部激活程序后，或您以其他杭州钱生钱科技有限公司钱生钱允许的方式实
    际使用杭州钱生钱科技有限公司钱生钱服务时，即表示您已充分阅读、理解并接受本协议的全部内容，并与杭州钱生钱科技有限公司钱生钱达成协议。您承诺接受并遵守本协议的约定，届时您不应以未阅读本协议
    的内容或者未获得杭州钱生钱科技有限公司钱生钱对您问询的解答等理由，主张本协议无效，或要求撤销本协议。\n\n
        一、协议范围\n
        &#160;&#160;&#160;&#160;1、本协议由您与杭州钱生钱科技有限公司钱生钱的经营者共同缔结，本协议具有合同效力。有关杭州钱生钱科技有限公司钱生钱经营者的信息请查看杭州钱生钱科技有限公司钱生钱首页底部公布的公司信息和证照信息。\n
        &#160;&#160;&#160;&#160;2、除另行明确声明外，杭州钱生钱科技有限公司钱生钱服务包含任何杭州钱生钱科技有限公司钱生钱提供的基于互联网以及移动网的相关服务，且均受本协议约束。如果您不同意本协议的约定，您应立即停止注册//激活
        程序或停止使用杭州钱生钱科技有限公司钱生钱服务。\n
        &#160;&#160;&#160;&#160;3、本协议内容包括协议正文及所有杭州钱生钱科技有限公司钱生钱已经发布或将来可能发布的各类规则、公告或通知均为本协议不可分割的组成部分，与协议正文具有同等法律效力。\n
        &#160;&#160;&#160;&#160;4、杭州钱生钱科技有限公司钱生钱有权根据需要不时地制订、修改本协议及/或各类规则，并以网站公示的方式进行变更公告，无需另行单独通知您。变更后的协议和规则一经在网站公布后，立即或在公告明确的特定时间
        自动生效。若您在前述变更公告后继续使用杭州钱生钱科技有限公司钱生钱服务的，即表示您已经阅读、理解并接受经修订的协议和规则。若您不同意相关变更，应当立即停止使用杭州钱生钱科技有限公司钱生钱服务。\n\n
        二、使用规则\n
        &#160;&#160;&#160;&#160;1、您确认，在您完成注册程序或以其他杭州钱生钱科技有限公司钱生钱允许的方式实际使用杭州钱生钱科技有限公司钱生钱服务时，您应当是具备完全民事行为能权利能力和完全民事力
        的自然人、法人或其他组织。若您不具备前述主体资格，则您及您的监护人应承担因此而导致的一切后果，且杭州钱生钱科技有限公司钱生钱有权注销或永久冻结您的账户，并向您及您的监护人索偿相应损失。\n
        &#160;&#160;&#160;&#160;2、您注册成功后，杭州钱生钱科技有限公司钱生钱将给予每个注册用户一个用户帐号及相应的密码，该用户帐号和密码由您负责保管；您应当对您帐号进行的所有活动和事件负法律责任。\n
        &#160;&#160;&#160;&#160;3、您不应将您的帐号、密码转让或出借予他人使用。如您发现您的帐号遭他人非法使用，应立即通知杭州钱生钱科技有限公司钱生钱。因黑客行为或您的保管疏忽导致帐号、密码遭他人
        非法使用，杭州钱生钱科技有限公司钱生钱不承担任何责任。\n
        &#160;&#160;&#160;&#160;4、您承诺不得以任何方式利用杭州钱生钱科技有限公司钱生钱直接或间接从事违反中国法律、以及社会公德的行为，杭州钱生钱科技有限公司钱生钱有权对违反上述承诺的内容和帐户予以
        删除。\n
        &#160;&#160;&#160;&#160;5、杭州钱生钱科技有限公司钱生钱有权对您使用杭州钱生钱科技有限公司钱生钱的情况进行审查和监督，如您在使用杭州钱生钱科技有限公司钱生钱时违反规定，杭州钱生钱科技有限公司
        钱生钱或其授权的人有权要求您改正或直接采取一切必要的措施（包括但不限于更改或删除用户张贴的内容、暂停或终止您使用杭州钱生钱科技有限公司钱生钱的权利）以减轻您不当行为造成的影响。\n
        &#160;&#160;&#160;&#160;6、您注册的帐号昵称如存在违反法律法规或国家政策要求，杭州钱生钱科技有限公司钱生钱有权收回该账号昵称。\n
        &#160;&#160;&#160;&#160;7、您同意杭州钱生钱科技有限公司钱生钱有权在提供网络服务过程中以各种方式投放各种商业性广告或其他任何类型的商业信息（包括但不限于在杭州钱生钱科技有限公司钱生钱网站的任何
        页面上投放广告），并且，您同意接受杭州钱生钱科技有限公司钱生钱通过电子邮件或其他方式向您发送商品促销或其他相关商业信息。\n\n
        三、免责声明\n
        &#160;&#160;&#160;&#160;1、杭州钱生钱科技有限公司钱生钱不对您发表的内容或评论的正确性进行保证。\n
        &#160;&#160;&#160;&#160;2、您在杭州钱生钱科技有限公司钱生钱发表的内容仅表明您个人的立场和观点，并不代表杭州钱生钱科技有限公司钱生钱的立场或观点。作为内容的发表者，需自行对所发表的内容负责，
        因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。杭州钱生钱科技有限公司钱生钱不承担任何法律及连带责任。\n
        &#160;&#160;&#160;&#160;3、鉴于网络服务的特殊性，您同意杭州钱生钱科技有限公司钱生钱有权随时变更、中断或终止部分或全部的网络服务。\n
        &#160;&#160;&#160;&#160;4、您理解，杭州钱生钱科技有限公司钱生钱需要定期或不定期地对提供网络服务的平台（如互联网网站、移动网络等）或相关的设备进行检修或者维护，如因此类情况而造成网络服务在合
        理时间内的中断，杭州钱生钱科技有限公司钱生钱无需为此承担任何责任，但杭州钱生钱科技有限公司钱生钱应尽可能事先进行通告。\n
        &#160;&#160;&#160;&#160;5、杭州钱生钱科技有限公司钱生钱不保证网站中有关公司商情、股票评析、投资方向等内容的正确性和适用性。您基于上述内容所进行的交易或投资决定，由您承担全部后果和责任。股市
        有风险，入市须谨慎！\n
        &#160;&#160;&#160;&#160;6、杭州钱生钱科技有限公司钱生钱是一个理财服务平台，汇集了诸多类型的投资者、理财机构，杭州钱生钱科技有限公司钱生钱建议您在使用过程中保护自己的个人隐私与股票账户秘密，
        不宜将个人隐私或者账户信息透露给其他人员。由此造成的损失，由您自己承担。\n
        &#160;&#160;&#160;&#160;7、本声明未涉及的问题参见国家有关法律法规，当本声明与国家法律法规冲突时，以国家法律法规为准。杭州钱生钱科技有限公司钱生钱之声明以及其修改权、更新权及最终解释权均属杭
        州钱生钱科技有限公司钱生钱所有。\n\n
        四、隐私保护\n
        &#160;&#160;&#160;&#160;保护注册用户隐私是杭州钱生钱科技有限公司钱生钱的一项基本政策，杭州钱生钱科技有限公司钱生钱保证不对外公开或向第三方提供单个注册用户的注册资料及注册用户在使用网络服务
        时存储在杭州钱生钱科技有限公司钱生钱的非公开内容，但下列情况除外：\n
        &#160;&#160;&#160;&#160;1、事先获得用户的明确授权；\n
        &#160;&#160;&#160;&#160;2、根据有关的法律法规要求；\n
        &#160;&#160;&#160;&#160;3、按照相关政府主管部门的要求；\n
        &#160;&#160;&#160;&#160;4、为维护社会公众的利益；\n
        &#160;&#160;&#160;&#160;5、为维护杭州钱生钱科技有限公司钱生钱的合法权益。\n\n
        五、退订政策\n
        &#160;&#160;&#160;&#160;杭州钱生钱科技有限公司钱生钱在提供服务过程中有可能以电子邮件或其他方式向您发送网站相关的服务或者活动信息，这是杭州钱生钱科技有限公司钱生钱提供的服务的组成部分，如您不
        愿意收到类似信息，可联系杭州钱生钱科技有限公司钱生钱客服完成退订手续。\n\n
        六、协议终止\n
        &#160;&#160;&#160;&#160;1、您同意，杭州钱生钱科技有限公司钱生钱有权自行全权决定以任何理由不经事先通知的中止、终止向您提供部分或全部杭州钱生钱科技有限公司钱生钱服务，暂时冻结或永久冻结（注销
        ）您的账户在杭州钱生钱科技有限公司钱生钱的权限，且无须为此向您或任何第三方承担任何责任。\n
        &#160;&#160;&#160;&#160;2、出现以下情况时，杭州钱生钱科技有限公司钱生钱有权直接以注销账户的方式终止本协议，并有权永久冻结（注销）您的账户在杭州钱生钱科技有限公司钱生钱的权限：\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;a)您提供的手机号、电子邮箱不存在或无法联系和接收电子邮件，且没有其他方式可以与您进行联系，或杭州钱生钱科技有限公司钱生钱以其它联系方式通
        知您更改电子邮件信息，而您在杭州钱生钱科技有限公司钱生钱通知后三个工作日内仍未更改为有效的电子邮箱的。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;b)您提供的用户信息中的主要内容不真实或不准确或不及时或不完整；\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;c)本协议（含规则）变更时，您明示并通知杭州钱生钱科技有限公司钱生钱不愿接受新的服务协议的；\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;d)其它杭州钱生钱科技有限公司钱生钱认为应当终止服务的情况。\n\n
        七、关于链接\n
        &#160;&#160;&#160;杭州钱生钱科技有限公司钱生钱平台内容中可能会提供与其他互联网网站或资源的链接。对于上述网站或资源是否可以利用，杭州钱生钱科技有限公司钱生钱不予保证。因使用或依赖上述网站或资
        源产生的损失或损害，杭州钱生钱科技有限公司钱生钱也不负担任何责任。\n\n
        八、法律适用\n
        &#160;&#160;&#160;1、本协议之效力、解释、变更、执行与争议解决均适用中华人民共和国大陆地区法律，如无相关法律规定的，则应参照通用国际商业惯例和/或行业惯例。\n
        &#160;&#160;&#160;2、本协议及因本协议产生的一切法律关系及纠纷，您与杭州钱生钱科技有限公司钱生钱平台的经营者均同意以被告住所地人民法院为第一审管辖法院。\n

    </string>
    <string name="addepople">我发布的</string>
    <string name="requestarr">申请列表</string>
    <string name="bossinfo">商家信息</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="tip_title">你确定要删除吗？</string>
    <string name="tip_desc">删除之后将无法恢复</string>
    <string name="local">从本地相册中获取</string>
    <string name="photo">拍照</string>
    <string name="g_image_desc"></string>
    <string name="g_label_update">更新于:</string>
    <string name="g_label_last_time">1分钟前</string>
    <string name="g_pull_down_for_refresh">下拉刷新</string>
    <string name="g_release_for_refresh">松开刷新</string>
    <string name="g_refreshing">正在刷新&#8230;</string>
    <string name="g_pull_up_for_more">上拉加载更多</string>
    <string name="g_release_for_more">松开加载更多</string>
    <string name="g_loading">正在加载&#8230;</string>
    <string name="g_not_updated_yet">暂未更新过</string>
    <string name="g_updated_at">上次更新于 %1$s 前</string>
    <string name="g_updated_just_now">刚刚更新</string>
    <string name="g_time_error">时间有问题</string>
    <string name="g_tip_menu_no">无可操作的菜单。</string>
    <string name="g_nodata">暂无记录</string>
    <string name="work_statu_no">已\n下\n架</string>
    <string name="work_statu_yes">招\n募\n中</string>
    <string name="selectaddress">请选择&#160;&#160;&#160;></string>
</resources>
