<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="handler"
            type="com.schoolpartime.schoolpartime.listener.IntentOnClickListener"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:id="@+id/rly"
        android:background="#fdfdfe">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/start_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#aa000000"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <com.schoolpartime.imageloader.weight.HeiCircleImageView
            android:layout_width="60dp"
            android:src="@drawable/people"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:id="@+id/circleImageView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tl_lg_username"
                android:layout_height="wrap_content">

                <com.schoolpartime.schoolpartime.weight.ClearEditText
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLength="10"
                    android:id="@+id/et_lg_username"
                    android:layout_height="50dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:id="@+id/tl_lg_psw"
                android:layout_height="wrap_content">

                <com.schoolpartime.schoolpartime.weight.ClearEditText
                    android:layout_width="match_parent"
                    android:hint="@string/psw"
                    android:maxLength="10"
                    android:id="@+id/et_lg_psw"
                    android:inputType="textPassword"
                    android:layout_height="50dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:background="@drawable/login_bt_type"
                android:layout_marginTop="50dp"
                android:id="@+id/submit_login"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:enabled="false"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:textColor="#737374"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:text="@string/forgetpsw"
                android:onClick="@{handler::onClick}"
                android:id="@+id/tv_lg_forget"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#838384"
            android:layout_alignParentBottom="true"
            android:textSize="16sp"
            android:text="@string/register_user"
            android:onClick="@{handler::onClick}"
            android:id="@+id/tv_lg_register"
            android:layout_height="wrap_content" />


    </RelativeLayout>
</layout>
