<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#dfede5e5"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/likeblue"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/back"
                android:id="@+id/user_back"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/mycollection"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/removeall"
                android:textColor="@color/white"
                android:id="@+id/user_change"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <include layout="@layout/layout_netbar"
            android:id="@+id/net_bar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/netbar_height" />

        <com.schoolpartime.schoolpartime.weiget.myListView.XrefershListview
            android:layout_width="match_parent"
            android:id="@+id/my_send"
            android:layout_height="match_parent"/>

    </LinearLayout>
</layout>