<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#dfede5e5"
        android:id="@+id/rly"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:id="@+id/my_tool_bar"
           android:background="@color/likeblue"
           android:layout_height="50dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_margin="8dp"
               android:text="主页"
               android:textSize="20sp"
               android:id="@+id/my_tool_bar_title"
               android:textColor="#000000"
               android:gravity="center"
               android:layout_height="match_parent" />

           <ImageView
               android:layout_width="25dp"
               android:src="@drawable/toolbar_search"
               android:layout_alignParentRight="true"
               android:id="@+id/my_tool_bar_search"
               android:layout_marginRight="40dp"
               android:layout_centerVertical="true"
               android:layout_height="25dp" />

           <ImageView
               android:layout_width="25dp"
               android:src="@drawable/toolbar_scan"
               android:layout_alignParentRight="true"
               android:id="@+id/my_tool_bar_scan"
               android:layout_marginRight="10dp"
               android:layout_centerVertical="true"
               android:layout_height="25dp" />

       </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent">

        <include layout="@layout/layout_netbar"
            android:id="@+id/net_bar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/fl_show"
            android:layout_height="match_parent" />

        </LinearLayout>

        <RadioGroup
            android:background="#FFF5F5F7"
            android:id="@+id/main_gp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/main_rb_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/main_radio_type_home"
                android:gravity="center"
                android:text="@string/mainpage"
                android:checked="true"
                android:textSize="12sp"
                android:textColor="#1296db" />

            <RadioButton
                android:id="@+id/main_rb_find"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/main_radio_type_find"
                android:text="@string/search"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/main_rb_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/main_radio_type_message"
                android:text="@string/my"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:text="10"
            android:id="@+id/badge"
            android:background="@drawable/shape_badge"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</layout>